--- a/app.json
+++ b/app.json
@@ -1,19 +1,17 @@
 {
   "expo": {
-    "name": "Recipes-App",
-    "slug": "Recipes-App",
+    "name": "Recipes",
+    "slug": "Recipes-App-Slug",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/appIcon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
